deployment/base/gateway/traefik-ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: foody-clone
spec:
  externalTrafficPolicy: Local
  ports:
  - name: app-services
    port: 80
    protocol: TCP
  - name: dashboard
    port: 8080
    protocol: TCP
  selector:
    k8s-app: traefik-ingress-lb
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: foody-clone
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8080
  selector:
    k8s-app: traefik-ingress-lb
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik-ingress
  namespace: foody-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      containers:
      - args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        image: traefik:v1.7.30-alpine
        name: traefik-ingress-lb
        ports:
        - containerPort: 80
          name: app-services
        - containerPort: 8080
          name: dashboard
        resources: {}
      serviceAccountName: traefik-ingress
      terminationGracePeriodSeconds: 60
